--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "bootstrap": "^5.2.0-beta1",
     "express": "^4.18.1",
     "pg": "^8.7.3"
   },
@@ -7,11 +8,9 @@
   "description": "[Project Instructions](./INSTRUCTIONS.md), this line may be removed once you have updated the README.md",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/server.js"
-    
   },
   "repository": {
     "type": "git",
