--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "bootstrap": "^5.2.0-beta1",
+    "bootstrap-icons": "^1.8.2",
     "express": "^4.18.1",
     "pg": "^8.7.3"
   },
